<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.michael.musicapp.AccountActivity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#282828"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="LOGIN"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription=""
                android:src="@drawable/logo2"
                tools:ignore="ContentDescription" />


            <EditText
                android:id="@+id/email"
                style="@style/textInputStyle"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/password"

                style="@style/textInputStyle"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                style="@style/buttonStyle1"
                android:text="@string/btn_login" />

            <Button
                android:id="@+id/btn_reset_password"
                android:text="@string/btn_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="false"
                android:textColor="#999999" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="#999999"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:visibility="gone" />

</RelativeLayout>

