<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mini_event"
        android:elevation="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_file2"
        android:clickable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/colorMiniGig"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Event_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/time"
                    android:fontFamily="sans-serif-condensed"
                    android:textAlignment="center"/>
            </LinearLayout>

            <TextView
                android:id="@+id/Event_Day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:textSize="11dp"
                android:text="Tuesday"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/Event_Date"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/date"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:textColor="@android:color/background_light"
                android:textSize="11dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/Event_Name"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#999999"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/Event_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/address"
                android:orientation="horizontal"
                android:textSize="12sp"
                android:paddingTop="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/musicGenreBackground"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:text="MUSIC GENRE:"
                    android:textSize="10sp"
                    android:textAlignment="center"></TextView>

                <TextView
                    android:id="@+id/Event_Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/genre"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>